--- a/MyMapApp/app/src/main/AndroidManifest.xml
+++ b/MyMapApp/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.emily.mymapapp">
-    <uses-permission android:name="anroid.erpmission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="anroid.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -34,7 +34,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyBpPetTfEBX6nR4vshiJolxuOKvmhO3y2Y" />
 
         <activity
             android:name=".MapsActivity"
